2001-09-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (fileSize): Decided to change return type to off_t
 	for increased range and portability.

2001-09-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (fileSize): Changed return value to double.

2001-09-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (colorMap): Allocate a colormap if it does not
 	already exist.

	* lib/Pixels.cpp (indexes): Don't attempt to validate image type.

	* lib/Image.cpp (colorMap): Optimized more for performance.

2001-09-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (fontTypeMetrics): New method to support
 	retrieving font metrics.

	* lib/TypeMetric.cpp : New class to support font metrics
 	information.

2001-09-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/Color.h (scaleDoubleToQuantum): Inline static
 	method made from previous ScaleDoubleToQuantum #define.
	(scaleQuantumToDouble): Inline static method made from previous
 	ScaleQuantumToDouble #define. Helps avoid possibility of clash
 	with user code.

2001-08-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (colorMap): Automatically extend colormap if
 	specified index is past end of current colormap.  Colormap is
 	limited to a maximum depth of MaxRGB entries.

2001-08-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (clipMask): New method to add a clip mask to the
 	image.  Adds clipping to any image operation wherever the clip
 	mask image is tranparent.

2001-08-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp (print): Add single quotes around file names
 	and font specifications.

2001-07-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (read): Ensure that only a single image frame is read.

2001-07-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/STL.h (flattenImages): New function to flatten a