@@ -8,6 +8,10 @@ with Magick++ itself.
 
   * New class 'TypeMetric' to contain font type metrics.
 
+  * User now may tell Blob updateNoCopy() what memory system (C or C++)
+    the memory was allocated from.  Used to assume the C++ allocator.
+    This resolves a bug on some platforms.
+
 (5.3.8)
   * Image colorMap method automatically extends the colormap if index
     is past the end of the current colormap.
